<resources>
    <string name="app_name">Vacation Planner</string>
    <string name="inp_antall_dager">Antall dager</string>
    <string name="txt_hotellnavn">placeholder</string>
    <string name="txt_bynavn">placeholder</string>
    <string name="txt_valuta">placeholder</string>
    <string name="btn_label">Calculate stay</string>
    <string name="lbl_antall_dager">How long will you stay?</string>
    <string name="lbl_sum_header">Your stay</string>
    <string name="lbl_sum">0</string>
    <string name="lbl_hotellnavn">Hotel Name</string>
    <string name="lbl_city_name">City Name</string>
    <string name="lbl_conversion_presentation">100 NOK is </string>

    <string name="en_us_peru">Peru</string>
    <string name="en_us_mexico">Mexico</string>
    <string name="en_us_russia">Russia</string>
    <string name="en_us_netherlands">Netherlands</string>
    <string name="en_us_australia">Australia</string>
    <string name="en_us_jamaica">Jamaica</string>
    <string name="en_us_norway">Norway</string>
    <string name="en_us_japan">Japan</string>
    <string name="en_us_andorra">Andorra</string>
    <string name="en_us_add_country">Add new country</string>
    <string name="en_us_country_name">Country Name</string>
    <string name="en_us_city_name">City Name</string>
    <string name="en_us_hotel_name">Hotel Name</string>
    <string name="en_us_btn_add_country">Add Country</string>

    <string name="en_us_change_currency">Change currency</string>
    <string name="en_us_plane_cost">How much is the return trip?</string>
    <string name="en_us_plane_avg_expenditure">What is your average daily expenditures?</string>
    <string name="en_us_lbl_currency">Choose Currency</string>


    <string-array name="countries">
        <item>Peru</item>
        <item>Mexico</item>
        <item>Russia</item>
        <item>Netherlands</item>
        <item>Australia</item>
    </string-array>

    <string-array name="hotels">
        <item>Dazzler Lima</item>
        <item>Hotel Corinto</item>
        <item>Kosmos</item>
        <item>Marriot Hotel</item>
        <item>The Westin Sydney</item>
    </string-array>

    <string-array name="cities">
        <item>Lima</item>
        <item>Mexico City</item>
        <item>Moskva</item>
        <item>Amsterdam</item>
        <item>Sydney</item>
    </string-array>
    <string name="peru" code="EUR" />

    <string-array name="currencies">
        <item>NOK</item>
        <item>PEN</item>
        <item>MXN</item>
        <item>RUB</item>
        <item>EUR</item>
        <item>AUD</item>
    </string-array>

    <string-array name="currency_bases">
        <item>1</item>
        <item>0.41</item>
        <item>2.38</item>
        <item>7.13</item>
        <item>0.10</item>
        <item>0.16</item>
    </string-array>

    <string-array name="options">
        <item>Calculate travel costs</item>
        <item>Add new country</item>
    </string-array>



</resources>
