<?xml version="1.0" encoding="utf-8"?>

<!--Navigation drawer -->




<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.erlendhall.oblig1.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    android:background="@color/colorPrimaryDark">







    <!-- Flagg -->
    <ImageView
        android:id="@+id/flag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/peruvian_flag_foreground"
        android:scaleType="fitCenter"/>
    <TextView
        android:id="@+id/lbl_countries_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/flag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="placeholder"
        android:textColor="@color/colorAccent"
        android:textSize="13pt"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Spinner
            android:id="@+id/spin_countries"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </Spinner>

        <Button
            android:id="@+id/til_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_label"
            android:textColor="@color/colorPrimary"

            android:layout_gravity="top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!-- Hotellnavn -->
        <TextView
            android:id="@+id/test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_hotellnavn"
            android:textAlignment="center"
            android:layout_below="@id/txt_by"
            android:layout_marginTop="50dp"
            android:textSize="13pt"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/txt_hotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/txt_hotellnavn"
            android:textAlignment="center"
            android:layout_below="@id/test"
            />


        <!--Bynavn -->
        <TextView
            android:id="@+id/test2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_city_name"
            android:textAlignment="center"
            android:textSize="13pt"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/txt_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_bynavn"
            android:textAlignment="center"
            android:layout_below="@id/test2"
            android:textColor="@color/colorAccent"

            />






    </RelativeLayout>

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>


        <ListView
            android:id="@+id/navigation2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:entries="@array/cities"
            android:background="@color/colorPrimary"/>

    </android.support.v4.widget.DrawerLayout>


</android.support.constraint.ConstraintLayout>

