<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/green"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/linear_days_input">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_days_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@id/relative_dager_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_conversion">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_sum_header"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <!-- kalkuleringsresultat -->
        <TextView
            android:id="@+id/lbl_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_sum"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/lbl_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:text="@string/en_us_lbl_currency" />

        <!-- velg valuta -->
        <Spinner
            android:id="@+id/cur_spinner"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/green"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/linear_days_input"
        app:layout_constraintBottom_toTopOf="@id/relative_dager_input">

    </LinearLayout>

    <!-- Input antall feriedager -->
    <RelativeLayout
        android:id="@+id/relative_dager_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/lbl_antall_dager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/antall_dager"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:text="@string/lbl_antall_dager"
/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <!-- antall dager -->
            <EditText
                android:id="@+id/antall_dager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:ems="5" />

            <!-- flybillett -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorAccent"
                android:text="@string/en_us_plane_cost"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/place_ticket_cost"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="5"
                android:gravity="center"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />

            <!-- oppholdskostnader -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorAccent"
                android:text="@string/en_us_plane_avg_expenditure"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/avg_expenditure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:ems="5"
                android:gravity="center_horizontal" />
            <Button
                android:id="@+id/btn_calc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textColor="@color/colorAccent"
                android:background="@color/green"
                android:text="Calculate"/>

        </LinearLayout>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>